
      - Fixed broken COLOR command.

      - Fixed Makefile suite that erroneously linked with -lpthread when 
        linking with -lm was necessary. Also fixed makefiles trying to build 
        libcu8 even on linux

FRIDAY 1ST, JUNE

      - Added a brand new editing system to the libcu8 library so that Dos9's 
        utf-8 versions supports decent editing facilities like hability to 
        insert characters in the middle of the input or use history.

      - Fixed a bug causing the %* variable to contain the script name if the 
        script was launched as a separate thread inside an interpretor.

      - Fixed Broken makefiles for linux.

      - Fixed Broken console functions for linux.

WEDNESDAY 6TH

      - Fixed %ERRORLEVEL% variable which is now implemented as a read-only 
        variable to avoid polluting child processes environment (especially 
        cmd.exe which behaviour gets buggy when errorlevel is defined).

      - Fixed SET /A command to be able to specify expression containing 
        spaces.

      - Fixed SET default behaviour that provided an extension breaking the 
        original command behaviour. The only behaviour used then is the old 
        cmd behaviour that truncate the input. Fixed the manual page also.

      - Fixed Dos9_RunCommand() and added Dos9_Exec.c to provide a more 
        reliable support for external command and the START command.

      - Fixed FIND command to provide ErrorLevels compatible with cmd.exe, 
        (ie. 0 means "match found").

      - Modified history behaviour of libcu8.

      - Fixed broken thread function preventing correct exit values from being 
        reported to parent threads.

      - Fixed CALL function to include search in %PATH% and %pathext% if 
        available on the system when calling file or batch. Also fixed a bug 
        that omitted the 10th parameter if more then 10 parameters were given

      - Re coded START command.

      - Enabled version 218.2.
